feat: implement functionality to update environments
- Make name, connectionUrl and type optional in UpdateEnvironment use case
- Create useUpdateEnvironment custom hook to update environment name
- Update OAS3.0 API documentation to highlight new contract changes
- Misc fmt.printF cleanup
- Create UpdateEnvironmentModal and add support for onUpdate and onDelete props in EnvironmentCard components
- Create updateEnvironmentSchema for form validation related to environment updates
- Add frontend HMR support for local development with Docker Compose
- Update readme.md to provide a better project description
- Create Dockerfile.dev image for local development in client app
